Fixed image spacing

--- a/app/assets/stylesheets/recipeDetails.scss
+++ b/app/assets/stylesheets/recipeDetails.scss
@@ -12,11 +12,15 @@ $light-gray: #f2f2f2;
         flex: 1;
         display: flex;
         flex-direction: column;
+        justify-content: space-between;
+        padding: 20px;
         font-size: 1.5rem;
         font-family: 'Karla', sans-serif;
 
         .recipe-details {
             flex: 1;
+            margin-top: 35px;
+            text-align: justify;
 
             .recipe-name {
                 color: $green;
@@ -27,6 +31,9 @@ $light-gray: #f2f2f2;
             flex: 1;
             height: 50%;
             width: 50%;
+            border-radius: 50%;
+            border: 5px solid $green;
+            margin: 0 auto;
         }
 
    }
